# ocaml-connect4

./: .gitignore  LICENSE  README.md  connect4.opam  dune-project
lib/: bot.ml  constants.ml  dune  game_logic.ml  game_loop.ml  key_reader.ml  setup.ml  types.mli  user_choice.ml
test/: dune  test_connect4.ml
